# LFSRNoiseUGens

./: README.md
LFSRNoiseUGens/: CMakeCache.txt  CMakeLists.txt  LFSRNoise.cpp  LFSRNoise.hpp  LFSRNoise_scsynth.scx  LFSRNoise_supernova.scx  Makefile  README.md  cmake_install.cmake  install_manifest.txt
LFSRNoiseUGens/LFSRNoise/: LFSRNoise_scsynth.scx  LFSRNoise_supernova.scx
LFSRNoiseUGens/LFSRNoise/HelpSource/Classes/: LFSRNoise.schelp
LFSRNoiseUGens/Xcode/LFSRNoise/: main.cpp
LFSRNoiseUGens/Xcode/LFSRNoise.xcodeproj/: project.pbxproj
LFSRNoiseUGens/Xcode/LFSRNoise.xcodeproj/project.xcworkspace/xcuserdata/josiahsytsma.xcuserdatad/: UserInterfaceState.xcuserstate
LFSRNoiseUGens/Xcode/LFSRNoise.xcodeproj/xcuserdata/josiahsytsma.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
LFSRNoiseUGens/Xcode/LFSRNoise.xcodeproj/xcuserdata/josiahsytsma.xcuserdatad/xcschemes/: xcschememanagement.plist
LFSRNoiseUGens/plugins/LFSRNoise/: LFSRNoise.cpp  LFSRNoise.schelp  LFSRNoiseUGens.sc
LFSRNoiseUGens/sc/HelpSource/Classes/: LFSRNoise.schelp
LFSRNoiseUgens/: CMakeCache.txt  LFSRNoise_scsynth.scx  LFSRNoise_supernova.scx  Makefile  cmake_install.cmake  install_manifest.txt  regenerate
LFSRNoiseUgens/plugins/LFSRNoise/: LFSRNoise.cpp  LFSRNoise.schelp  LFSRNoiseUGens.sc  LFSRNoiseUnstable.cpp
